// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio[Base] should render correctly  1`] = `
<div
  class="c7ok09u soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="ch6vfkl soui-radio-indicator-wrapper"
  >
    <span
      class="c-g5gjj6 soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="c1w8wma soui-radio-desc"
  >
    Option
  </span>
</div>
`;

exports[`Radio[Base] should render correctly about block 1`] = `
<div
  class="c-c7kcmq soui-radio-group"
>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper cgmhgbp soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about button 1`] = `
<div
  class="c-c7kcmq soui-radio-group c-afzpk0 soui-radio-group-button caz14bn soui-button-group"
  dir="ltr"
>
  <button
    class="c7ok09u soui-radio-wrapper c-ljqh2g soui-button-secondary c-hb33si soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="c7ok09u soui-radio-wrapper c-ljqh2g soui-button-secondary c-hb33si soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="c7ok09u soui-radio-wrapper cgmhgbp soui-radio-wrapper-checked cmi4mna soui-button-primary c-hb33si soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="c7ok09u soui-radio-wrapper c-ljqh2g soui-button-secondary c-hb33si soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="c7ok09u soui-radio-wrapper c-ljqh2g soui-button-secondary c-hb33si soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="c7ok09u soui-radio-wrapper c-ljqh2g soui-button-secondary c-hb33si soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="c7ok09u soui-radio-wrapper c-ljqh2g soui-button-secondary c-hb33si soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about button outline 1`] = `
<div
  class="c-c7kcmq soui-radio-group c-afzpk0 soui-radio-group-button caz14bn soui-button-group"
  dir="ltr"
>
  <button
    class="c7ok09u soui-radio-wrapper c-ljqh2g soui-button-secondary c-hb33si soui-button-button c9ewgyu soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="c7ok09u soui-radio-wrapper c-ljqh2g soui-button-secondary c-hb33si soui-button-button c9ewgyu soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="c7ok09u soui-radio-wrapper cgmhgbp soui-radio-wrapper-checked cmi4mna soui-button-primary c-hb33si soui-button-button c9ewgyu soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="c7ok09u soui-radio-wrapper c-ljqh2g soui-button-secondary c-hb33si soui-button-button c9ewgyu soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="c7ok09u soui-radio-wrapper c-ljqh2g soui-button-secondary c-hb33si soui-button-button c9ewgyu soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="c7ok09u soui-radio-wrapper c-ljqh2g soui-button-secondary c-hb33si soui-button-button c9ewgyu soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="c7ok09u soui-radio-wrapper c-ljqh2g soui-button-secondary c-hb33si soui-button-button c9ewgyu soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about cancel 1`] = `
<div
  class="c-c7kcmq soui-radio-group"
>
  <div
    class="c7ok09u soui-radio-wrapper cgmhgbp soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled 1`] = `
<div
  class="c-c7kcmq soui-radio-group"
>
  <div
    class="c7ok09u soui-radio-wrapper c-2sh3pe soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper c-2sh3pe soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper c-2sh3pe soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper c-2sh3pe soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper c-2sh3pe soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper c-2sh3pe soui-radio-wrapper-disabled cgmhgbp soui-radio-wrapper-checked"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper c-2sh3pe soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled func 1`] = `
<div
  class="c-c7kcmq soui-radio-group"
>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper c-2sh3pe soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper cgmhgbp soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group 1`] = `
<div
  class="c-c7kcmq soui-radio-group"
>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper cgmhgbp soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group children 1`] = `
<div
  class="c-c7kcmq soui-radio-group"
>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper cgmhgbp soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c-c7kcmq soui-radio-group c-afzpk0 soui-radio-group-button caz14bn soui-button-group"
    dir="ltr"
  >
    <button
      class="c7ok09u soui-radio-wrapper cgmhgbp soui-radio-wrapper-checked cmi4mna soui-button-primary c-hb33si soui-button-button cb5j5wr soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="c7ok09u soui-radio-wrapper c-ljqh2g soui-button-secondary c-hb33si soui-button-button cb5j5wr soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="c7ok09u soui-radio-wrapper c-ljqh2g soui-button-secondary c-hb33si soui-button-button cb5j5wr soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="c-c7kcmq soui-radio-group c-afzpk0 soui-radio-group-button caz14bn soui-button-group"
    dir="ltr"
    style="margin-top: 24px;"
  >
    <button
      class="c7ok09u soui-radio-wrapper cgmhgbp soui-radio-wrapper-checked cmi4mna soui-button-primary c-hb33si soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="c7ok09u soui-radio-wrapper c-ljqh2g soui-button-secondary c-hb33si soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="c7ok09u soui-radio-wrapper c-ljqh2g soui-button-secondary c-hb33si soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="c-c7kcmq soui-radio-group c-afzpk0 soui-radio-group-button caz14bn soui-button-group"
    dir="ltr"
    style="margin-top: 24px;"
  >
    <button
      class="c7ok09u soui-radio-wrapper cgmhgbp soui-radio-wrapper-checked cmi4mna soui-button-primary c-hb33si soui-button-button cb1hae7 soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="c7ok09u soui-radio-wrapper c-ljqh2g soui-button-secondary c-hb33si soui-button-button cb1hae7 soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="c7ok09u soui-radio-wrapper c-ljqh2g soui-button-secondary c-hb33si soui-button-button cb1hae7 soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
</div>
`;

exports[`Radio[Base] should render correctly about status 1`] = `
<div
  class="c7ok09u soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="ch6vfkl soui-radio-indicator-wrapper"
  >
    <span
      class="c-g5gjj6 soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="c1w8wma soui-radio-desc"
  >
    OptionA
  </span>
</div>
`;
